@@ -24,6 +24,9 @@ Changelog
 * HTTPCORE-465: Update example NHttpReverseProxy to support SSL to origin servers which use self-signed certificates.
   Contributed by Gary Gregory <ggregory at apache.org>
 
+* HTTPCORE-467: Add getter methods to HttpAsyncService for subclasses to access instance variables.
+  Contributed by Gary Gregory <ggregory at apache.org>
+
 
 Release 4.4.6
 -------------------
